[mod]2025.11.04 增加JVM相关知识点